--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Previsão do tempo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <ul id="previsao-tempo"></ul>
     </main>
-    
-   
     <script src="script.js"></script>
 </body>
 </html>
